# cs180-22-strawhatpirates

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Student.cpp  cmake_install.cmake  createFile.h  editStudent.h  main  main.cpp  menu.h  professor.json  searchStudent.h  sortStudent.h  student1.json  studentTest.cpp  test  test.cpp
googletest-prefix/src/googletest-stamp/: googletest-gitinfo.txt
googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
header/: JsonInterface.h  Person.h  Professor.h  Student.h  addStudent.h  deleteStudent.h  menu.h  readFile.h  searchStudent.h
lib/: JsonInterface.cpp  Person.cpp  Professor.cpp  Student.cpp  studentTest.cpp  test.cpp
